--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bent": "^7.3.12",
     "chalk": "4.1.2",
     "cloudflare": "^5.2.0",
+    "cron": "^4.3.3",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
     "p-queue": "^9.0.0"
