add docker nuild

--- a/.env.sample
+++ b/.env.sample
@@ -1,14 +1,15 @@
 CONCURRENCY=1
 
-CRON=0 0 0 * * *
+CRON=0 */12 * * *
 TZ=Europe/Paris
 
 ENVATO_PERSONAL_TOKEN=
 
+CF_ACCOUNT_ID=
+
 CF_API_KEY=
 CF_D1_ID=
 CF_D1_TABLE=purchases
-CF_ACCOUNT_ID=
 
 R2_ENDPOINT=https://$CF_ACCOUNT_ID.eu.r2.cloudflarestorage.com
 R2_ACCESS_KEY=
