--- a/.env.sample
+++ b/.env.sample
@@ -16,3 +16,5 @@ R2_ACCESS_KEY=
 R2_SECRET_KEY=
 
 R2_BUCKET=envato-purchase
+# Optionnel : Webhook Discord pour les notifications
+DISCORD_WEBHOOK_URL=
